# Spencer

./: .dir-locals.el  .gitignore  .pnp.js  .prettierignore  .prettierrc  .tokei.md  .yarnrc.yml  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  config-example.json  package-lock.json  package.json  tsconfig.json
.cargo/: config
.github/: FUNDING.yml  boring-cyborg.yml  dependabot.yml
.github/workflows/: Bump.yml  CodeQL.yml  Dependabot.yml  Push.yml  Snyk.yml  ci.yml  codeql.yml
.husky/: commit-msg  commit-msg.sh  pre-commit  pre-push  pre-push.sh
.vim/: coc-settings.json
.yarn/plugins/@yarnpkg/: plugin-typescript.cjs
.yarn/releases/: yarn-berry.cjs
.yarn/sdks/prettier/: index.js  package.json
.yarn/sdks/typescript/: package.json
prisma/: schema.prisma
prisma/migrations/20220928212450_init/: migration.sql
src/: event_handler.rs  index.ts  main.rs
src/analyzers/: Analyze.ts  CommandAnalyzer.ts
src/client/: Client.ts
src/commands/: reminder.rs
src/database/: connection.rs  mod.rs  prisma.rs  reminder.rs
src/db/: Database.ts
src/interfaces/: Anything.ts  Bio.ts  Command.ts  Config.ts  ConfigCommand.ts  Event.ts  GithubContributorUser.ts  GithubUser.ts  Item.ts  Job.ts  MDNResult.ts  Route.ts  SRAImage.ts  Schema.ts  SortFunction.ts
src/language/: Lexer.ts  index.ts  test.ts
src/music/: Dispatcher.ts  MusicManager.ts
src/scripts/: Git.ts  New.ts
src/server/: Server.ts
src/static/: Badges.ts  Configs.ts  Emojis.ts  Items.ts  Jobs.ts  README.md
src/typings/: index.d.ts
src/utils/: Pagination.ts  RepeatUntil.ts  Utils.ts  yn.ts
(+128 files in other folders)
