[package]
name = "spencer"
version = "0.1.0"
edition = "2021"
default-run = "spencer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
once_cell = "1.15.0"
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "collector", "temp_cache"], version = "0.11.5" }
tokio = { features = ["macros", "rt-multi-thread", "tracing"], version = "1.21.2" }
ms = "0.1.1"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
serde = { version = "1.0.145", features = ["derive"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.1" }

[profile.release]
lto = "thin"
strip = true
